--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MERN Starter</title>
+    <title>Papa Bear 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Import Bootstrap CSS from CDN for easy replacement/removal -->
