updating so I can deploy, come on past self! you needed to deploy

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,5 +22,5 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
   <!-- Import bundled JavaScript -->
-  <script src="/bundle.js"></script>
+  <script src="/build/main.js"></script>
 </html>
